# colbert-onnx

./: .gitignore  README.md  pyproject.toml
colbert-onnx/: .gitignore
colbert-onnx/colbert_onnx/: convert.py  validate.py
colbert_onnx/: __init__.py  convert.py
